--- a/index.html
+++ b/index.html
@@ -22,15 +22,11 @@
             <div class="sectionContainer">
                 
                 <div class="sectionImage">
-                    <img src="https://picsum.photos/1200/600" alt="">
+                    <img src="image.png" alt="">
                 </div> 
                 <div class="sectionContent">
                     <h2 class="sectionTitle">Pracownia fotograficzna</h2>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque nobis culpa nam cumque, voluptates placeat necessitatibus harum soluta ab, amet beatae hic minima nisi dicta quisquam consequuntur suscipit blanditiis!
-                    Neque nihil aliquid vero consectetur aliquam! Et laudantium quidem maiores dolores sit atque nam nisi illo illum provident tempora, expedita nulla eius laboriosam ab cum mollitia, exercitationem harum sapiente! Magni!
-                    Expedita optio dolores, quam maiores aperiam nam beatae porro ratione consectetur sint, eum doloribus non perspiciatis nulla, necessitatibus vero magni repellendus eligendi ab placeat ex quod mollitia dolor? Asperiores, aut.
-                    Sint maxime aliquid veritatis necessitatibus minima doloribus ipsam, modi rem, eum debitis repellat animi aspernatur voluptatum, fuga rerum! Quis exercitationem cupiditate magni nisi deleniti amet autem dolorum laudantium quasi! Omnis?
-                    Tempore doloremque molestiae dicta, illo sit doloribus totam nesciunt atque odio placeat error id, odit eaque ratione impedit et hic. Aspernatur dignissimos libero at. Maiores animi amet qui porro esse.
+                    W pracowni fotograficznej można tworzyć profesjonalne sesje zdjęciowe. Podczas dni otwartych będziesz mógł/mogła uczestniczyć w takiej sesji będąc modelem jak i fotografem. Wykonane zdjęcia będą dostępne w ciemni.
                 </div>
             </div>
         </section>
